# derivatives

./: CMakeLists.txt  main.cpp  readme.md
entities/: AtomicEntity.h  BaseEntity.cpp  BaseEntity.h  Fraction.cpp  Fraction.h  Multiplication.cpp  Multiplication.h  MultiplicationEntity.cpp  MultiplicationEntity.h  NaN.cpp  NaN.h  Parser.cpp  Parser.h  Power.cpp  Power.h  Scalar.cpp  Scalar.h  ScalarEntity.cpp  ScalarEntity.h  Sum.cpp  Sum.h  SumEntity.cpp  SumEntity.h  UnsupportedDerivative.cpp  UnsupportedDerivative.h  Variable.cpp  Variable.h  VariableEntity.cpp  VariableEntity.h
interface/: BasicMenu.cpp  BasicMenu.h  ParseException.h  Parser.cpp  Parser.h
test/: BaseEntityTest.cpp  BaseEntityTest.h  DerivativesTest.cpp  DerivativesTest.h  EntityTest.h  FractionTest.cpp  FractionTest.h  MainTest.cpp  MultiplicationEntityTest.cpp  MultiplicationEntityTest.h  MultiplicationTest.cpp  MultiplicationTest.h  ParserTest.cpp  ParserTest.h  PowerTest.cpp  PowerTest.h  SumEntityTest.cpp  SumEntityTest.h  SumTest.cpp  SumTest.h  TestReport.cpp  TestReport.h  VariableEntityTest.cpp  VariableEntityTest.h  VariableTest.cpp  VariableTest.h
utils/: ConsoleUtils.cpp  ConsoleUtils.h  Logger.cpp  Logger.h  NumberUtils.cpp  NumberUtils.h  StringUtils.cpp  StringUtils.h
